--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1B/Index.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1B/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Class 1A</h1>
+<h1>Class 1B</h1>
 <p>
     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Class1Split">Back to previous page</a>
 </p>
@@ -13,15 +13,15 @@
     <thead>
         <tr>
             <th>
-                <a class="nav-link text-dark" asp-area="" asp-controller="Class1A" asp-action="StudentsAvarages">Grade averages</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Class1B" asp-action="StudentsAvarages">Grade averages</a>
             </th>
             <th>
-                <a class="nav-link text-dark" asp-area="" asp-controller="Class1A" asp-action="StudentsContactInformation">Contact information of students</a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Class1B" asp-action="StudentsContactInformation">Contact information of students</a>
             </th>
         </tr>
     </thead>
 </table>
-<form asp-action="Index" asp-controller="Class1A" method="post">
+<form asp-action="Index" asp-controller="Class1B" method="post">
 
     <table class="table">
         <style>
