--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1B/StudentsContactInformation.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1B/StudentsContactInformation.cshtml
@@ -1,28 +1,15 @@
-﻿@model dziennik_elektroniczny.Application.ViewModels.VmForDisplay.ListStudentForListVm
+﻿@model dziennik_elektroniczny.Application.ViewModels.VmForDisplay.ListStudentsContactInfoForListVm
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "StudentsContactInformation";
 }
 
-<h1>Class 1A</h1>
+<h1>Students Contact Information</h1>
+
 <p>
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Class1Split">Back to previous page</a>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Class1B" asp-action="Index">Back to previous page</a>
 </p>
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                <a class="nav-link text-dark" asp-area="" asp-controller="Class1A" asp-action="StudentsAvarages">Grade averages</a>
-            </th>
-            <th>
-                <a class="nav-link text-dark" asp-area="" asp-controller="Class1A" asp-action="StudentsContactInformation">Contact information of students</a>
-            </th>
-        </tr>
-    </thead>
-</table>
-<form asp-action="Index" asp-controller="Class1A" method="post">
-
+<form asp-action="StudentsContactInformation" asp-controller="Class1B" method="post">
     <table class="table">
         <style>
             table {
@@ -38,6 +25,7 @@
                 border: 1px solid;
                 padding: 10px;
             }
+
         </style>
         <thead>
             <tr>
@@ -51,13 +39,16 @@
                     LastName
                 </th>
                 <th>
-                    Avarage
+                    PhoneNumber
+                </th>
+                <th>
+                    Email
                 </th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.Students)
+            @foreach (var item in Model.StudentsContactInfo)
             {
                 <tr>
                     <td>
@@ -70,7 +61,10 @@
                         @Html.DisplayFor(modelItem => item.LastName)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Avarage)
+                        @Html.DisplayFor(modelItem => item.PhoneNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
                     </td>
                 </tr>
             }
