--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1A/EditEnglishGrade.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1A/EditEnglishGrade.cshtml
@@ -1,4 +1,4 @@
-﻿@model dziennik_elektroniczny.Application.ViewModels.VmForEdit.EditBiologyVm
+﻿@model dziennik_elektroniczny.Application.ViewModels.VmForEdit.EditEnglishVm
 
 @{
     ViewData["Title"] = "EditEnglishGrade";
