--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1B/Index.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1B/Index.cshtml
@@ -5,40 +5,43 @@
 }
 
 <h1>Class 1B</h1>
-<p>
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Class1Split">Back to previous page</a>
-</p>
+<div class="flex">
+    <div>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Class1Split">Back to previous page</a>
+    </div>
+    <div class="next">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Class1B" asp-action="StudentsAvarages">Grade averages</a>
+    </div>
+    <div class="next">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Class1B" asp-action="StudentsContactInformation">Contact information of students</a>
+    </div>
+</div>
+<style>
+    table {
+        text-align: center;
+    }
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                <a class="nav-link text-dark" asp-area="" asp-controller="Class1B" asp-action="StudentsAvarages">Grade averages</a>
-            </th>
-            <th>
-                <a class="nav-link text-dark" asp-area="" asp-controller="Class1B" asp-action="StudentsContactInformation">Contact information of students</a>
-            </th>
-        </tr>
-    </thead>
-</table>
+    .flex {
+        display: flex;
+    }
+
+    .next {
+        font-weight: bold;
+    }
+
+    th {
+        border: 1px solid;
+        padding: 10px;
+    }
+
+    td {
+        border: 1px solid;
+        padding: 10px;
+    }
+</style>
+
 <form asp-action="Index" asp-controller="Class1B" method="post">
-
     <table class="table">
-        <style>
-            table {
-                text-align: center;
-            }
-
-            th {
-                border: 1px solid;
-                padding: 10px;
-            }
-
-            td {
-                border: 1px solid;
-                padding: 10px;
-            }
-        </style>
         <thead>
             <tr>
                 <th>
@@ -53,7 +56,6 @@
                 <th>
                     Avarage
                 </th>
-                <th></th>
             </tr>
         </thead>
         <tbody>
