--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class2B/EditBiologyGrade.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class2B/EditBiologyGrade.cshtml
@@ -8,7 +8,7 @@
 
 <hr />
 <p>
-    <a class="nav-link text-dark" asp-area="" asp-controller="Class1C" asp-action="BiologyAvarages">Back to previous page</a>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Class2B" asp-action="BiologyAvarages">Back to previous page</a>
 </p>
 <div class="row">
     <div class="col-md-4">
