--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class3A/GermanAvarages.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class3A/GermanAvarages.cshtml
@@ -1,17 +1,17 @@
-﻿@model dziennik_elektroniczny.Application.ViewModels.VmForDisplay.ListMathForListVm
+﻿@model dziennik_elektroniczny.Application.ViewModels.VmForDisplay.ListGermanForListVm
 
 @{
-    ViewData["Title"] = "MathAvarages";
+    ViewData["Title"] = "GermanAvarages";
 }
 
-<h1>Math Avarages</h1>
+<h1>German Avarages</h1>
 
 <div class="flex">
     <div>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Class2A" asp-action="StudentsAvarages">Back to previous page</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Class3A" asp-action="StudentsAvarages">Back to previous page</a>
     </div>
     <div class="next">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Class2A" asp-action="EditMathGrade">Edit grade</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Class3A" asp-action="EditGermanGrade">Edit grade</a>
     </div>
 </div>
 <style>
@@ -37,7 +37,7 @@
         padding: 10px;
     }
 </style>
-<form asp-action="MathAvarages" asp-controller="Class2A" method="post">
+<form asp-action="GermanAvarages" asp-controller="Class3A" method="post">
     <table class="table">
         <thead>
             <tr>
@@ -56,7 +56,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.Maths)
+            @foreach (var item in Model.German)
             {
                 <tr>
                     <td>
