--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class3B/MathAvarages.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class3B/MathAvarages.cshtml
@@ -8,10 +8,10 @@
 
 <div class="flex">
     <div>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Class2A" asp-action="StudentsAvarages">Back to previous page</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Class3B" asp-action="StudentsAvarages">Back to previous page</a>
     </div>
     <div class="next">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Class2A" asp-action="EditMathGrade">Edit grade</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Class3B" asp-action="EditMathGrade">Edit grade</a>
     </div>
 </div>
 <style>
@@ -37,7 +37,7 @@
         padding: 10px;
     }
 </style>
-<form asp-action="MathAvarages" asp-controller="Class2A" method="post">
+<form asp-action="MathAvarages" asp-controller="Class3B" method="post">
     <table class="table">
         <thead>
             <tr>
