--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class3C/StudentsContactInformation.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class3C/StudentsContactInformation.cshtml
@@ -1,30 +1,17 @@
-﻿@model dziennik_elektroniczny.Application.ViewModels.VmForDisplay.ListMathForListVm
+﻿@model dziennik_elektroniczny.Application.ViewModels.VmForDisplay.ListStudentsContactInfoForListVm
 
 @{
-    ViewData["Title"] = "MathAvarages";
+    ViewData["Title"] = "StudentsContactInformation";
 }
 
-<h1>Math Avarages</h1>
+<h1>Students Contact Information</h1>
 
-<div class="flex">
-    <div>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Class2A" asp-action="StudentsAvarages">Back to previous page</a>
-    </div>
-    <div class="next">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Class2A" asp-action="EditMathGrade">Edit grade</a>
-    </div>
-</div>
+<p>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Class3C" asp-action="Index">Back to previous page</a>
+</p>
 <style>
     table {
         text-align: center;
-    }
-
-    .flex {
-        display: flex;
-    }
-
-    .next {
-        font-weight: bold;
     }
 
     th {
@@ -37,7 +24,7 @@
         padding: 10px;
     }
 </style>
-<form asp-action="MathAvarages" asp-controller="Class2A" method="post">
+<form asp-action="StudentsContactInformation" asp-controller="Class3C" method="post">
     <table class="table">
         <thead>
             <tr>
@@ -45,31 +32,37 @@
                     Index number
                 </th>
                 <th>
-                    TestAvarage
+                    FirstName
                 </th>
                 <th>
-                    ShortQuizAvarage
+                    LastName
                 </th>
                 <th>
-                    HomeWorkAvarage
+                    PhoneNumber
+                </th>
+                <th>
+                    Email
                 </th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.Maths)
+            @foreach (var item in Model.StudentsContactInfo)
             {
                 <tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.Id)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.TestAvarage)
+                        @Html.DisplayFor(modelItem => item.FirstName)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ShortQuizAvarage)
+                        @Html.DisplayFor(modelItem => item.LastName)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.HomeworkAvarage)
+                        @Html.DisplayFor(modelItem => item.PhoneNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
                     </td>
                 </tr>
             }
