--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1A/EditEnglishGrade.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1A/EditEnglishGrade.cshtml
@@ -20,6 +20,11 @@
                 <span asp-validation-for="StudentId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="SubjectId"  style="display:none" class="control-label"></label>
+                <input asp-for="SubjectId"  type="hidden" value="3" class="form-control" />
+                <span asp-validation-for="SubjectId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="TestAvarage" class="control-label"></label>
                 <input asp-for="TestAvarage" class="form-control" />
                 <span asp-validation-for="TestAvarage" class="text-danger"></span>
