--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1A/EnglishAvarages.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1A/EnglishAvarages.cshtml
@@ -10,9 +10,12 @@
     <div>
         <a class="nav-link text-dark" asp-area="" asp-controller="Class1A" asp-action="StudentsAvarages">Back to previous page</a>
     </div>
+    @if(User.IsInRole("EnglishTeacher") || User.IsInRole("HeadTeacher"))
+    {
     <div class="next">
         <a class="nav-link text-dark" asp-area="" asp-controller="Class1A" asp-action="EditEnglishGrade">Edit grade</a>
     </div>
+    }
 </div>
 <style>
     table {
