--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1B/GeographyAvarages.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class1B/GeographyAvarages.cshtml
@@ -10,9 +10,13 @@
     <div>
         <a class="nav-link text-dark" asp-area="" asp-controller="Class1B" asp-action="StudentsAvarages">Back to previous page</a>
     </div>
+    @if (User.IsInRole("GeographyTeacher") || User.IsInRole("HeadTeacher"))
+    {
     <div class="next">
         <a class="nav-link text-dark" asp-area="" asp-controller="Class1B" asp-action="EditGeographyGrade">Edit grade</a>
-    </div>
+    </div> 
+    }
+    
 </div>
 <style>
     table {
