--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class2A/GermanAvarages.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class2A/GermanAvarages.cshtml
@@ -10,9 +10,13 @@
     <div>
         <a class="nav-link text-dark" asp-area="" asp-controller="Class2A" asp-action="StudentsAvarages">Back to previous page</a>
     </div>
+    @if (User.IsInRole("GermanTeacher") || User.IsInRole("HeadTeacher"))
+    {
     <div class="next">
         <a class="nav-link text-dark" asp-area="" asp-controller="Class2A" asp-action="EditGermanGrade">Edit grade</a>
     </div>
+    }
+    
 </div>
 <style>
     table {
