--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class3C/ChemistryAvarages.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class3C/ChemistryAvarages.cshtml
@@ -10,9 +10,12 @@
     <div>
         <a class="nav-link text-dark" asp-area="" asp-controller="Class3C" asp-action="StudentsAvarages">Back to previous page</a>
     </div>
+    @if (User.IsInRole("ChemistryTeacher") || User.IsInRole("HeadTeacher"))
+    {
     <div class="next">
         <a class="nav-link text-dark" asp-area="" asp-controller="Class3C" asp-action="EditChemistryGrade">Edit grade</a>
-    </div>
+    </div>  
+    }
 </div>
 <style>
     table {
