change naming on teacherList view and in teacherContactInfo view

--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Teacher/Index.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Teacher/Index.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Class 1A</h1>
+<h1>Teachers</h1>
 
 <div class="flex">
     <div>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Teacher" asp-action="TeacherAddresses">Teacher Addresses</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Teacher" asp-action="TeacherAddresses">Teacher Contact Information</a>
     </div>
 </div>
 <style>
